# near-firehose-indexer

./: BUILD.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  build.rs  nearcore.firehose.patch  rust-toolchain.toml
.github/: generate_change_log.sh
.github/workflows/: audit.yml  push.yml  release.yml
deepmind-pb/: Cargo.toml
deepmind-pb/src/: main.rs
devel/: run.sh
devel/battlefield/: config.json
firehose-pb/: Cargo.toml
firehose-pb/src/: main.rs
ressources/: sample.json
src/: configs.rs  dm.rs  firehose.rs  logging.rs  main.rs
src/codec/: mod.rs  sf.near.codec.v1.rs  sf.near.r#type.v1.rs
src/pb/: mod.rs  sf_near_v1.rs
