[workspace]
members = ["firehose-pb"]

[package]
name = "near-firehose-indexer"
version = "1.34.0-rc.1"
authors = ["StreamingFast Developers <dev@streamingfast.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
clap = { version = "3.1.6", features = ["derive"] }
hex = { version = "0.4.2", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.4"
prost = "0.11.6"
prost-types = "0.11.6"
rkyv = "=0.7.38"
tracing = { version = "0.1.36", features = ["std"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "registry", "std"] }

# 944dd70ebae4b4603677d7969807f11bcd353588 = 1.33.0 tag on the nearcore repo. they messed up the release, and using the tag
# here does not work, so i am pointing to their commit directly
near-indexer = { git = "https://github.com/near/nearcore", rev="1.34.0-rc.1" }
near-crypto = { git = "https://github.com/near/nearcore", rev="1.34.0-rc.1" }
near-vm-errors = { git = "https://github.com/near/nearcore", rev="1.34.0-rc.1" }

[build-dependencies]
tonic-build = "0.8.4"
