[workspace]
members = ["firehose-pb"]

[package]
name = "near-firehose-indexer"
version = "2.1.0-rc.3"
authors = ["StreamingFast Developers <dev@streamingfast.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1.28", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
actix = "0.13.0"
clap = { version = "3.1.6", features = ["derive"] }
hex = { version = "0.4.2", features = ["serde"] }
openssl = { version = "^0.10.60", features = ["vendored"] }
openssl-probe = "0.1.4"
prost = "0.11.6"
prost-types = "0.11.6"
rkyv = "=0.7.38"
tracing = { version = "0.1.36", features = ["std"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "registry", "std"] }
curve25519-dalek = { version = "4.1.3", default-features = false }

near-indexer = { git = "https://github.com/near/nearcore", rev = "2.1.0-rc.3" }
near-crypto = { git = "https://github.com/near/nearcore", rev = "2.1.0-rc.3" }

[build-dependencies]
tonic-build = "0.8.4"
